--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -7,6 +7,8 @@ ruleSets:
   rules: 
   #userown
   - DOMAIN-SUFFIX,ip.cn,Proxy
+  - DOMAIN-SUFFIX,epochtimes.com,REJECT
+  - DOMAIN-SUFFIX,dongtaiwang.com,REJECT
   # Apple
   - DOMAIN-SUFFIX,apple.com,DIRECT
   - DOMAIN-SUFFIX,icloud.com,DIRECT
