--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -1,12 +1,13 @@
 ruleSets:
-# 
+#
 # Potatso Config File [CloudGate]
 # Download Time: 2017-06-07 18:05:40
 #
 - name: CloudGate
-  rules: 
+  rules:
   #userown
   - DOMAIN-SUFFIX,ip.cn,Proxy
+  - DOMAIN-SUFFIX,ipip.net,Proxy
   - DOMAIN-SUFFIX,epochtimes.com,REJECT
   - DOMAIN-SUFFIX,dongtaiwang.com,REJECT
   # Apple
@@ -1722,4 +1723,3 @@ ruleSets:
   - IP-CIDR,221.179.191.0/24,REJECT
   # Other
   - GEOIP,CN,DIRECT
-  
