--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -7,6 +7,8 @@ ruleSets:
   rules:
   #userown
   - DOMAIN-SUFFIX,ip.cn,Proxy
+  - DOMAIN-SUFFIX,123cha.com,Proxy
+  - DOMAIN-SUFFIX,ip138.com,Proxy
   - DOMAIN-SUFFIX,ipip.net,Proxy
   - DOMAIN-SUFFIX,epochtimes.com,REJECT
   - DOMAIN-SUFFIX,dongtaiwang.com,REJECT
