--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -10,6 +10,8 @@ ruleSets:
   - DOMAIN-SUFFIX,ipip.net,Proxy
   - DOMAIN-SUFFIX,epochtimes.com,REJECT
   - DOMAIN-SUFFIX,dongtaiwang.com,REJECT
+  - DOMAIN-SUFFIX,pinsta.me,Proxy
+  - DOMAIN-SUFFIX,cdninstagram.com,Proxy
   # Apple
   - DOMAIN-SUFFIX,apple.com,DIRECT
   - DOMAIN-SUFFIX,icloud.com,DIRECT
