--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -6,6 +6,7 @@ ruleSets:
 - name: CloudGate
   rules:
   #userown
+  - DOMAIN-SUFFIX,sndcdn.com,Proxy
   - DOMAIN-SUFFIX,ip.cn,Proxy
   - DOMAIN-SUFFIX,ipip.net,Proxy
   - DOMAIN-SUFFIX,epochtimes.com,REJECT
