--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -6,6 +6,8 @@ ruleSets:
 - name: CloudGate
   rules:
   #userown
+  - DOMAIN-SUFFIX,tiktok.com,Proxy
+  - DOMAIN-SUFFIX,tiktokcdn.com,Proxy
   - DOMAIN-SUFFIX,sndcdn.com,Proxy
   - DOMAIN-SUFFIX,ip.cn,Proxy
   - DOMAIN-SUFFIX,ipip.net,Proxy
