--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -7,6 +7,7 @@ ruleSets:
   rules:
   #userown
   - DOMAIN-SUFFIX,tiktok.com,Proxy
+  - DOMAIN-SUFFIX,animate-onlineshop.com.tw
   - DOMAIN-SUFFIX,tiktokcdn.com,Proxy
   - DOMAIN-SUFFIX,sndcdn.com,Proxy
   - DOMAIN-SUFFIX,ip.cn,Proxy
