--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -7,7 +7,8 @@ ruleSets:
   rules:
   #userown
   - DOMAIN-SUFFIX,tiktok.com,Proxy
-  - DOMAIN-SUFFIX,animate-onlineshop.com.tw
+  - DOMAIN-SUFFIX,coingecko.com,Proxy
+  - DOMAIN-SUFFIX,animate-onlineshop.com.tw,Proxy
   - DOMAIN-SUFFIX,tiktokcdn.com,Proxy
   - DOMAIN-SUFFIX,sndcdn.com,Proxy
   - DOMAIN-SUFFIX,ip.cn,Proxy
