--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -6,6 +6,8 @@ ruleSets:
 - name: CloudGate
   rules:
   #userown
+  - DOMAIN-SUFFIX,licdn.com,Proxy
+  - DOMAIN-SUFFIX,linkedin.com,Proxy
   - DOMAIN-SUFFIX,tiktok.com,Proxy
   - DOMAIN-SUFFIX,coingecko.com,Proxy
   - DOMAIN-SUFFIX,animate-onlineshop.com.tw,Proxy
