--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -6,6 +6,7 @@ ruleSets:
 - name: CloudGate
   rules:
   #userown
+  - DOMAIN-SUFFIX,whatsapp.net,Proxy
   - DOMAIN-SUFFIX,licdn.com,Proxy
   - DOMAIN-SUFFIX,linkedin.com,Proxy
   - DOMAIN-SUFFIX,tiktok.com,Proxy
