--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -6,6 +6,7 @@ ruleSets:
 - name: CloudGate
   rules:
   #userown
+  - DOMAIN-SUFFIX,chatgpt.com,Proxy
   - DOMAIN-SUFFIX,openai.com,Proxy
   - DOMAIN-SUFFIX,g.whatsapp.net,Proxy
   - DOMAIN-SUFFIX,licdn.com,Proxy
