--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -6,6 +6,7 @@ ruleSets:
 - name: CloudGate
   rules:
   #userown
+  - DOMAIN-SUFFIX,doubleclick.net,Proxy
   - DOMAIN-SUFFIX,googleapis.com,Proxy
   - DOMAIN-SUFFIX,chatgpt.com,Proxy
   - DOMAIN-SUFFIX,openai.com,Proxy
@@ -795,7 +796,6 @@ ruleSets:
   - DOMAIN,feng.com,DIRECT
   - DOMAIN-SUFFIX,frdic.com,DIRECT
   - DOMAIN-SUFFIX,godic.net,DIRECT
-  - DOMAIN,font.fonts.googleapis.com,DIRECT
   - DOMAIN-SUFFIX,gtimg.com,DIRECT
   - DOMAIN-SUFFIX,haosou.com,DIRECT
   - DOMAIN-SUFFIX,hdslb.com,DIRECT
@@ -1214,7 +1214,6 @@ ruleSets:
   - DOMAIN-SUFFIX,google-analytics.com,REJECT
   - DOMAIN-SUFFIX,googleadsserving.cn,REJECT
   - DOMAIN-SUFFIX,googlesyndication.com,REJECT
-  - DOMAIN-SUFFIX,googleadservices.com,REJECT
   - DOMAIN-SUFFIX,googletagservices.com,REJECT
   - DOMAIN-SUFFIX,googeadsserving.cn,REJECT
   - DOMAIN-SUFFIX,guomob.com,REJECT
