--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -6,8 +6,20 @@ ruleSets:
 - name: CloudGate
   rules:
   #userown
-  - DOMAIN-SUFFIX,doubleclick.net,Proxy
+  # 建议确保以下规则位于所有 DIRECT 规则之前
+  - DOMAIN-SUFFIX,youtube.com,Proxy
+  - DOMAIN-SUFFIX,youtu.be,Proxy
+  - DOMAIN-SUFFIX,googlevideo.com,Proxy
+  - DOMAIN-SUFFIX,ytimg.com,Proxy
+  - DOMAIN-SUFFIX,ggpht.com,Proxy
   - DOMAIN-SUFFIX,googleapis.com,Proxy
+  - DOMAIN-SUFFIX,google.com,Proxy
+  - DOMAIN-SUFFIX,gvt1.com,Proxy
+  - DOMAIN-SUFFIX,gvt2.com,Proxy
+  - DOMAIN-SUFFIX,gvt3.com,Proxy
+  - DOMAIN-SUFFIX,youtubeeducation.com,Proxy
+  - DOMAIN-SUFFIX,youtube-nocookie.com,Proxy
+  - DOMAIN-SUFFIX,doubleclick.net,Proxy
   - DOMAIN-SUFFIX,chatgpt.com,Proxy
   - DOMAIN-SUFFIX,openai.com,Proxy
   - DOMAIN-SUFFIX,g.whatsapp.net,Proxy
@@ -258,7 +270,6 @@ ruleSets:
   - DOMAIN-SUFFIX,getcloudapp.com,Proxy
   - DOMAIN-SUFFIX,get-digital-help.com,Proxy
   - DOMAIN-SUFFIX,getlantern.org,Proxy
-  - DOMAIN-SUFFIX,ggpht.com,Proxy
   - DOMAIN-SUFFIX,ggssl.com,Proxy
   - DOMAIN-SUFFIX,ghost.org,Proxy
   - DOMAIN-SUFFIX,giganews.com,Proxy
@@ -281,7 +292,6 @@ ruleSets:
   - DOMAIN-SUFFIX,google.cn,Proxy
   - DOMAIN-SUFFIX,google.co.id,Proxy
   - DOMAIN-SUFFIX,google.co.jp,Proxy
-  - DOMAIN-SUFFIX,google.com,Proxy
   - DOMAIN-SUFFIX,google.com.hk,Proxy
   - DOMAIN-SUFFIX,google.com.sg,Proxy
   - DOMAIN-SUFFIX,google.com.tw,Proxy
@@ -294,7 +304,6 @@ ruleSets:
   - DOMAIN-SUFFIX,googlesile.com,Proxy
   - DOMAIN-SUFFIX,googlesource.com,Proxy
   - DOMAIN-SUFFIX,googleusercontent.com,Proxy
-  - DOMAIN-SUFFIX,googlevideo.com,Proxy
   - DOMAIN-SUFFIX,gopetition.com,Proxy
   - DOMAIN-SUFFIX,gotw.ca,Proxy
   - DOMAIN-SUFFIX,gradconnection.com,Proxy
@@ -302,9 +311,6 @@ ruleSets:
   - DOMAIN-SUFFIX,graylog2.org,Proxy
   - DOMAIN-SUFFIX,gstatic.com,Proxy
   - DOMAIN-SUFFIX,gtricks.com,Proxy
-  - DOMAIN-SUFFIX,gvt1.com,Proxy
-  - DOMAIN-SUFFIX,gvt2.com,Proxy
-  - DOMAIN-SUFFIX,gvt3.com,Proxy
   - DOMAIN-SUFFIX,hahlo.com,Proxy
   - DOMAIN-SUFFIX,helloandroid.com,Proxy
   - DOMAIN-SUFFIX,hellonewyork.us,Proxy
@@ -741,9 +747,6 @@ ruleSets:
   - DOMAIN-SUFFIX,yasni.co.uk,Proxy
   - DOMAIN-SUFFIX,yfrog.com,Proxy
   - DOMAIN-SUFFIX,yidio.com,Proxy
-  - DOMAIN-SUFFIX,youtu.be,Proxy
-  - DOMAIN-SUFFIX,youtube.com,Proxy
-  - DOMAIN-SUFFIX,ytimg.com,Proxy
   - DOMAIN-SUFFIX,zarias.com,Proxy
   - DOMAIN-SUFFIX,zattoo.com,Proxy
   - DOMAIN-SUFFIX,zeutch.com,Proxy
@@ -1227,7 +1230,6 @@ ruleSets:
   - DOMAIN,game.kuwo.cn,REJECT
   - DOMAIN,gg.kogou.com,REJECT
   - DOMAIN-SUFFIX,ggfeng.com,REJECT
-  - DOMAIN-SUFFIX,gvt1.com,REJECT
   - DOMAIN,gma.alicdn.com,REJECT
   - DOMAIN-SUFFIX,goyoo.com.cn,REJECT
   - DOMAIN,gad.netease.com,REJECT
