--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -1667,6 +1667,10 @@ ruleSets:
   - DOMAIN-MATCH,dnserror,REJECT
   - DOMAIN-MATCH,openx,REJECT
   # IPCIDR
+  - IP-CIDR,172.217.0.0/16,Proxy
+  - IP-CIDR,142.250.0.0/15,Proxy
+  - IP-CIDR,216.58.192.0/19,Proxy
+  - IP-CIDR,74.125.0.0/16,Proxy
   - IP-CIDR,10.0.0.0/8,DIRECT
   - IP-CIDR,100.64.0.0/10,DIRECT
   - IP-CIDR,127.0.0.0/8,DIRECT
