--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -7,6 +7,8 @@ ruleSets:
   rules:
   #userown
   # 建议确保以下规则位于所有 DIRECT 规则之前
+  - DOMAIN-SUFFIX,googlesyndication.com,Proxy
+  - DOMAIN-SUFFIX,googleadservices.com,Proxy
   - DOMAIN-SUFFIX,youtube.com,Proxy
   - DOMAIN-SUFFIX,youtu.be,Proxy
   - DOMAIN-SUFFIX,googlevideo.com,Proxy
@@ -1215,7 +1217,6 @@ ruleSets:
   - DOMAIN,g3.letv.com,REJECT
   - DOMAIN-SUFFIX,global-gear.jp,REJECT
   - DOMAIN-SUFFIX,google-analytics.com,REJECT
-  - DOMAIN-SUFFIX,googlesyndication.com,REJECT
   - DOMAIN-SUFFIX,googletagservices.com,REJECT
   - DOMAIN-SUFFIX,googeadsserving.cn,REJECT
   - DOMAIN-SUFFIX,guomob.com,REJECT
