--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -6,6 +6,7 @@ ruleSets:
 - name: CloudGate
   rules:
   #userown
+  - REJECT,IP-PROTOCOL,UDP,443
   # 建议确保以下规则位于所有 DIRECT 规则之前
   - DOMAIN-SUFFIX,googlesyndication.com,Proxy
   - DOMAIN-SUFFIX,googleadservices.com,Proxy
