--- a/Potatso.Conf
+++ b/Potatso.Conf
@@ -7,6 +7,12 @@ ruleSets:
   rules:
   #userown
   - REJECT,IP-PROTOCOL,UDP,443
+  # 拦截 YouTube 的追踪和某些可能导致卡死的统计域名
+  - DOMAIN-SUFFIX,googlevideo.com,Proxy
+  - DOMAIN-SUFFIX,youtube-ui.l.google.com,Proxy
+  - DOMAIN-SUFFIX,ytimg.l.google.com,Proxy
+  - DOMAIN-SUFFIX,ytstatic.l.google.com,Proxy
+  - DOMAIN-SUFFIX,youtubei.googleapis.com,Proxy
   # 建议确保以下规则位于所有 DIRECT 规则之前
   - DOMAIN-SUFFIX,googlesyndication.com,Proxy
   - DOMAIN-SUFFIX,googleadservices.com,Proxy
